# just-keep-identity

./: .geminiignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-TW.md  ROADMAP.md  VERIFY.md  install.sh
crates/jki/: Cargo.toml
crates/jki-agent/: Cargo.toml
crates/jki-agent/src/: main.rs  tray.rs
crates/jki-core/: Cargo.toml
crates/jki-core/src/: import.rs  keychain.rs  lib.rs  paths.rs
crates/jkim/: Cargo.toml
docs/: demo.tape  homebrew-test-guide.md  jki-cli-spec.md  jki-prd-spec.md
docs/references/: Rust-Refactoring-AI-Training-Data-zh.md  Rust-Refactoring-AI-Training-Data.md
draft/: mission-session-logic-p1-plan.md
missions/: mission-automated-versioning.md  mission-cleanup-rkyv.md  mission-cli-config-persistence.md  mission-cli-intelligence-and-cleanup.md  mission-distribution-and-cicd.md  mission-edit-tool-enhancement.md  mission-knowledge-management-infrastructure.md  mission-launch-and-community-outreach.md  mission-opencode-edit-feedback.md  mission-phase-3.md  mission-session-logic-p1.md  mission-unit-test-report.md  mission-unit-test.md  mission-vault-state-refactor.md
missions/archive/: 2026-03-14-coordinate-anchored-edit-report.md  mission-agent-tray-icon-report.md  mission-biometric-auth-report.md  mission-jkim-completions-report.md  mission-opencode-edit-response.md  mission-session-logic-p1-report.md  mission-unified-auth-flag-report.md  (+2 more)
mock/: test-audit.sh  vault.metadata.yaml  vault.secrets.json
prototypes/: import_winauth.py
scripts/: jki_mvp.py  migrate_metadata.py  security-audit.sh
(+4 files in other folders)
