[package]
name = "jki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core" }
interprocess = "1.2.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
